--- a/tarefas_de_casa.qmd
+++ b/tarefas_de_casa.qmd
@@ -63,15 +63,69 @@ e família `theme_[estilo_do_tema]()`).
 
 ## Aula 4: Análise descritiva
 
-Em construção.
+A tarefa da Aula 4 deve ser realizada com os dados `pinguins`
+do pacote `dados`.
+
+1. Filtre a base para manter apenas as observações do
+ano de 2009.
+
+2. Escolha uma variável contínua da base de dados e
+verifique se ela segue uma distribuição normal através
+de um histograma e um teste de normalidade de Shapiro-Wilk.
+
+3. Independentemente da distribuição, crie uma variável
+transformada (a partir da que você escolheu) através do
+método da raíz quadrada (função `sqrt()`), da raíz cúbica
+(lembre-se do operador `^`) ou do log (função `log10()`).
+Você também pode criar um histograma da variável
+transformada (lembre-se da função `mutate()` para criar ou modificar colunas).
+
+<u>Gabarito em construção.</u>
   
 ## Aula 5: Inferência estatística
+
+A partir da base dos `pinguins` do pacote `dados`:
+
+1. Calcule a correlação produto momento de Pearson entre
+o comprimento do bico e a profundidade do bico dos pinguins.
+Crie um gráfico de pontos (dispersão) com `ggplot2` para
+acompanhar sua análise exploratória.
+
+2. Rode um teste *t* de duas amostras para verificar a
+diferença na média do comprimento da nadadeira entre os
+pinguins macho e fêmea.
+Usando as funções `group_by()` e `summarise()` do pacote
+`dplyr`, faça um resumo da média e da mediana dos
+comprimentos das nadadeiras estratificando pelos grupos
+(lembre-se que a base `pinguins` possui dois valores ausentes,
+os conhecidos `NA`, na coluna do `sexo`).
+
+3. Crie um modelo de ANOVA de uma via para verificar se
+há diferenças na massa corporal dos pinguins baseado em
+sua espécie.
+Caso sim, rode um teste de Tukey para analisar quais
+grupos diferenciam entre si.
   
-Em construção.
+<u>Gabarito em construção.</u>
   
 ## Aula 6: Modelos de regressão
+
+1. Ler Capítulo 8 do
+[livro OpenIntro Statistics](https://www.openintro.org/book/os/)
+sobre *Introduction to linear regression* (caso queira se
+aprofundar, ler Capítulo 9 sobre
+*Multiple and logistic regression*).
+
+2. A partir dos dados `iris` do pacote `dados`,
+crie um modelo de regressão linear simples e um
+modelo de regressão linear múltipla com as variáveis da
+sua escolha (lembre-se que o desfecho deve ser contínuo,
+ou seja, numérico).
   
-Em construção.
+3. Crie um gráfico de dispersão/pontos (*scatterplot*)
+para acompanhar sua análise de regressão linear simples.
+  
+<u>Gabarito em construção.</u>
   
 ## Aula 7: Tópicos avançados
   
