adicionar exemplo de cor e forma no slide de camadas da aula 3 de visualização

--- a/slides/3_visualizacao/slides_visualizacao.qmd
+++ b/slides/3_visualizacao/slides_visualizacao.qmd
@@ -170,6 +170,27 @@ dados_starwars |>
   geom_point()
 ```
 
+## Cor
+
+```{r cor}
+#| out-width: 75%
+#| fig-align: "center"
+dados_starwars |> 
+  ggplot() +
+  aes(x = massa, y = altura, color = genero) +
+  geom_point()
+```
+
+## Forma
+
+```{r forma}
+#| out-width: 75%
+#| fig-align: "center"
+dados_starwars |> 
+  ggplot() +
+  aes(x = massa, y = altura, shape = sexo_biologico) +
+  geom_point()
+```
 
 :::
 
