corrigir typo no qui-quadrado da aula 5. unificar aula 4 em apenas um slide

--- a/slides/5_inferencia/slides_inferencia.qmd
+++ b/slides/5_inferencia/slides_inferencia.qmd
@@ -24,7 +24,7 @@ bibliography: references.bib
 - Testes de hipótese
   - Hipótese nula e alternativa
   - Interpretação de resultados
-- Teste $chi^2$
+- Teste $\chi^2$
 - Teste t
 - ANOVA de uma via e Tukey HSD (*Honest Significant Differences*)
 - Correlação
