--- a/slides/4_descritiva/slides_descritiva.qmd
+++ b/slides/4_descritiva/slides_descritiva.qmd
@@ -21,7 +21,7 @@ format:
 - Medidas de tendência central
 - Medidas de dispersão
 - Medidas de assimetria e curtose
-- Testes de normalidade
+- Distribuição normal
 - Transformação de dados
 - Tabelas de frequência
 
@@ -43,14 +43,19 @@ medidas de cada espécie, sexo do pinguim e ano de documentação.
 :::
 :::
 
-## Olhadinha nos `pinguins`
+## `pinguins`
 
-```{r}
+```{r glimpse-pinguins}
 library(dados)
 library(tidyverse)
 
 glimpse(pinguins)
 ```
+
+```{r printar-pinguins}
+pinguins
+```
+
 
 ## Revisão de conceitos matemáticos
 
@@ -454,13 +459,12 @@ ggplot(data.frame(x = amostra), aes(x)) +
   labs(x = "Valores da amostra", y = "Frequência")
 ```
 
-## Testes de normalidade
+## Como testar normalidade?
 
 Em muitos casos, é necessário verificar se uma amostra segue uma distribuição
 normal antes de aplicar determinados testes estatísticos.
 
 * O teste de Shapiro-Wilk é um teste de normalidade que verifica se uma amostra segue uma distribuição normal
-* A hipótese nula ($H_0$) do teste é que a amostra segue uma distribuição normal
 * Se o $p$-valor do teste for menor do que o nível de significância (geralmente 0,05), rejeita-se a hipótese nula e conclui-se que a amostra não segue uma distribuição normal
 
 . . .
@@ -468,15 +472,25 @@ normal antes de aplicar determinados testes estatísticos.
 ::: columns
 ::: {.column width="50%"}
 ```{r shapiro-amostra-simulada}
-shapiro.test(amostra) # Normal
+# Exemplo de distribuição normal
+
+# Amostra de 500 sujeitos
+# com média de 175cm e 10cm de desvio padrão
+alturas_adultos <- rnorm(n = 500,
+                         mean = 175,
+                         sd = 10)
+
+shapiro.test(alturas_adultos)
 ```
 :::
 
 ::: {.column width="50%"}
 ```{r shapiro-massa-pinguins}
+# Exemplo de variável que não segue uma
+# distribuição normal
 pinguins |> 
   pull(massa_corporal) |> 
-  shapiro.test() # Não-normal
+  shapiro.test()
 ```
 :::
 :::
@@ -675,6 +689,26 @@ pinguins |>
 
 ## Tabelas de frequência
 
+A função `count()` do pacote `dplyr` pode ser usada para
+contar valores (frequência) a partir de uma ou mais
+variáveis.
+
+. . .
+
+```{r exemplo-basico-count}
+pinguins |> 
+  count(especie)
+```
+
+. . .
+
+```{r tabulacao-cruzada-count}
+pinguins |> 
+  count(especie, ilha)
+```
+
+## Tabelas de frequência com `janitor()`
+
 O pacote `janitor` oferece uma função `tabyl()` para produzir tabulações e
 tabulações cruzadas, que podem ser modificadas para exibir porcentagens,
 proporções, etc.
@@ -706,7 +740,7 @@ Função|Desfecho
 `adorn_ns()`|Adicionar contagens a uma tabela de proporções ou porcentagens.
 `adorn_title()`|Adicionar título da linha e coluna.
 
-## Exemplos de tabela cruzada
+## Exemplo de tabela cruzada
 
 ::: {.panel-tabset}
 
@@ -768,14 +802,13 @@ pinguins |>
 * Para a tarefa de casa, vamos seguir usando a base `pinguins` do pacote `dados`.
 
 1. Filtre a base para manter apenas as observações do ano de 2009.
-2. Escolha uma variável contínua da base de dados e verifique se ela segue
-uma distribuição normal através de um histograma e um teste de normalidade
-de Shapiro-Wilk.
-3. Independentemente da distribuição, crie uma variável transformada (a partir
-da que você escolheu) através do
-método
-da raíz quadrada (função `sqrt()`),
-da raíz cúbica (lembre-se do operador `^`) ou
-do log (função `log10()`). Você também pode criar um histograma da variável
-transformada.
-  - Lembre-se da função `mutate()` para criar ou modificar colunas.
+2. Verifique se a variável `comprimento_bico` da base de
+dados segue uma distribuição normal através de um histograma
+e um teste de normalidade de Shapiro-Wilk.
+3. Com a função `count()`, verifique a frequência da
+variável `sexo` na base de dados.
+4. Com a função `summarise()`, calcule a média, mediana e
+desvio padrão da variável `comprimento_nadadeira`.
+
+* Dica de leitura: Capítulos 4 e 5 do livro
+[Introduction to Modern Statistics](https://openintro-ims.netlify.app/).
