retornar a apenas um slide para aula de análise descritiva.

--- a/aulas_e_laboratorios.qmd
+++ b/aulas_e_laboratorios.qmd
@@ -33,8 +33,7 @@ pelo autor Bruno Montezano.
   
 ## Aula 4: Análise descritiva
   
-* [Slides (versão curta)](slides/4_descritiva/slides_descritiva_versao_curta.html)
-* [Slides (versão longa)](slides/4_descritiva/slides_descritiva_versao_longa.html)
+* [Slides](slides/4_descritiva/slides_descritiva.html)
 * [Código dos slides](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/4_descritiva/slides_descritiva.qmd)
 * [Script em R](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/4_descritiva/script_descritiva.R)
   
