--- a/tarefas_de_casa.qmd
+++ b/tarefas_de_casa.qmd
@@ -66,19 +66,17 @@ e família `theme_[estilo_do_tema]()`).
 A tarefa da Aula 4 deve ser realizada com os dados `pinguins`
 do pacote `dados`.
 
-1. Filtre a base para manter apenas as observações do
-ano de 2009.
+1. Filtre a base para manter apenas as observações do ano de 2009.
 
-2. Escolha uma variável contínua da base de dados e
-verifique se ela segue uma distribuição normal através
-de um histograma e um teste de normalidade de Shapiro-Wilk.
+2. Verifique se a variável `comprimento_bico` da base de
+dados segue uma distribuição normal através de um histograma
+e um teste de normalidade de Shapiro-Wilk.
 
-3. Independentemente da distribuição, crie uma variável
-transformada (a partir da que você escolheu) através do
-método da raíz quadrada (função `sqrt()`), da raíz cúbica
-(lembre-se do operador `^`) ou do log (função `log10()`).
-Você também pode criar um histograma da variável
-transformada (lembre-se da função `mutate()` para criar ou modificar colunas).
+3. Com a função `count()`, verifique a frequência da
+variável `sexo` na base de dados.
+
+4. Com a função `summarise()`, calcule a média, mediana e
+desvio padrão da variável `comprimento_nadadeira`.
 
 [Acessar o gabarito.](gabaritos/4_descritiva/gabarito.html)
   
